# JaxMulti-AgentRL

./: .gitignore  Dockerfile  Makefile  README.md  lxm3_config.py  lxm3_launcher.py  pyproject.toml
project_name/: VAPOR-Lite.py  algos_vapor.py  atari_game_run.py  atari_game_run_vapor.py  baselines_run.py  bsuite_run_vapor.py  config.py  deep_sea_wrapper.py  deepsea_run.py  deepsea_run_vapor.py  gymnax_jaxmarl_wrapper.py  main.py  testy_test.py  utils.py  vapor_lite.py
project_name/agents/: __init__.py  agent_base.py  agent_main.py  agent_utils.py  multi_agent.py  multi_agent_wrapper.py  single_agent.py
project_name/agents/DDPG/: DDPG.py  DDPGConfig.py  __init__.py  network.py
project_name/agents/ERSAC/: ERSAC.py  ERSACConfig.py  __init__.py  network.py
project_name/agents/ERSAC_MA/: ERSAC_MA.py  ERSAC_MAConfig.py  __init__.py
project_name/agents/IDQN/: IDQN.py  IDQNConfig.py  __init__.py  network.py
project_name/agents/MELIBA/: MELIBA.py  MELIBAConfig.py  PPO.py  __init__.py  hierarchical_sequential_VAE.py  network.py
project_name/agents/MFOS/: MFOS.py  MFOSConfig.py  __init__.py  network.py
project_name/agents/NAIVE/: NAIVE.py  NAIVEConfig.py  __init__.py  network.py
project_name/agents/PPO/: PPO.py  PPOConfig.py  __init__.py  network.py
project_name/agents/PPO_RNN/: PPO_RNN.py  PPO_RNNConfig.py  __init__.py  network.py
project_name/agents/PR2/: PR2.py  PR2Config.py  __init__.py  network.py
project_name/agents/QMIX/: QMIX.py  QMIXConfig.py  __init__.py  network.py
project_name/agents/ROMMEO/: ROMMEO.py  ROMMEOConfig.py  __init__.py  kernel.py  network.py
project_name/agents/T4T/: T4T.py
project_name/agents/VLITE/: VLITE.py  VLITEConfig.py  __init__.py  binomial.py
project_name/algos/: network_deepsea.py  sac.py  vapor_lite.py
project_name/buffer/: prioritised_buffer.py  replay_buffer.py
project_name/envs/: KS_JAX.py  SailingEnv.py  bsuite_deep_sea.py  env_wrappers.py  environments.py  gymanx_deep_sea_edit.py  logistic_map_env.py
project_name/tests/: JaxMARL_Walkthrough.ipynb  gp_om_testing.ipynb
project_name/vapor_stuff/: atari_game_run.py  atari_game_run_vapor.py  config.py  deepsea_run.py  main.py  mdp_pair_env.py  testy_test.py  utils.py
project_name/vapor_stuff/algos/: sac.py  (+6 more)
project_name/wandb/: latest-run
(+20 files in other folders)
